--- a/AmastyHamenok/ModuleHamenok/composer.json
+++ b/AmastyHamenok/ModuleHamenok/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "amasty_hamenok/module-hamenok",
+    "name": "amasty-hamenok/module-hamenok",
     "description": "First my module",
     "require": {
         "php": "~7.1.3||~7.2.0||~7.3.0"
@@ -10,7 +10,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "Amasty_Hamenok\\module_hamenok\\": ""
+            "AmastyHamenok\\ModuleHamenok\\": ""
         }
     },
     "version": "1.0.0"
